# agent-ui

./: .gitignore
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  migrations.py  models.py  permissions.py  schemas.py  security.py
backend/app/api/: __init__.py  admin.py  agent_groups.py  agents.py  auth.py  auth_sso.py  chat_proxy.py  dashboard.py  demo.py  models.py  router_registry.py
backend/app/api/admin_modules/: __init__.py  common.py  permissions.py  resources.py  sso_settings.py  sync_configs.py  sync_tasks.py  system_settings.py  users_roles_groups.py
backend/app/auth/: __init__.py  auth.py
backend/app/config/: __init__.py  config.py  settings.py
backend/app/core/: application.py
backend/app/db/: __init__.py  db.py  session.py
backend/app/migrations/: __init__.py  migrations.py
backend/app/models/: __init__.py  entities.py  models.py
backend/app/permissions/: __init__.py  dependencies.py  engine.py  permissions.py
backend/app/schemas/: __init__.py  contracts.py  schemas.py
backend/app/security/: __init__.py  login_crypto.py  security.py  tokens.py
backend/app/services/: agent_sync.py  chat_links.py  chat_user_sync.py  http_client.py  serializers.py  sso.py
backend/app/tasks/: __init__.py  agent_sync.py  celery_app.py  chat_user_sync.py
backend/scripts/: seed_user.py
backend/tests/: test_chat_proxy.py  test_permission_logic.py
ui/: index.html  package.json  vite.config.ts
ui/src/: App.css  App.vue  api.ts  main.ts  router.ts
ui/src/api/: admin.ts  agents.ts  (+3 more)
(+78 files in other folders)
